tests/ternary/valid/ternary_short_circuit.su
s32 main() {
    s32 a = 1;
    s32 b = 0;
    a ? (b = 1) : (b = 2);
    return b;
}