tests/ternary/invalid/ternary_assign.su
s32 main() {
    s32 a = 2;
    s32 b = 1;
    a > b ? a = 1 : a = 0;
    return a;
}